# cornucopia.owasp.org/src/routes/api/lang/dbd/+server.ts
@@ -1,6 +1,5 @@
 import { json } from '@sveltejs/kit';
 import type { RequestHandler } from '@sveltejs/kit';
-import { CreController } from '$domain/cre/creController';
 
 export const prerender = true;
 
@@ -8,7 +7,6 @@ export const GET: RequestHandler = () => {
   return json(
     {
       meta: {
-        edition: CreController.getEditionName('dbd'),
         component: 'cards',
         language: 'all',
         languages: ['en'],
